--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,8 @@
 @import "@fontsource/roboto";
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
+
+
+html, body {
+  overflow: hidden;  /* Hides scrollbars */
+}
