--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
 html, body {
   overflow: hidden;  /* Hides scrollbars */
